Fix overflow on landing page and incorrectly positioned footer

--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -6,6 +6,8 @@
   display: flex;
   flex-direction: column;
   flex: 1 1 100%;
+  overflow: hidden;
+  height: 100%;
 }
 
 .responsive {
