--- a/src/app/layout/footer-only-layout/footer-only-layout.component.css
+++ b/src/app/layout/footer-only-layout/footer-only-layout.component.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   flex: 1 1 100%;
   overflow: hidden;
+  height:100%;
 }
 
 
