--- a/src/app/neighborhood-registration/neighborhood-registration.component.css
+++ b/src/app/neighborhood-registration/neighborhood-registration.component.css
@@ -17,7 +17,9 @@
   width: 100%;
   height: 100%;
 
-  overflow: hidden;
+  max-width: 100%;
+  overflow-x: hidden;
+
 }
 
 .row {
@@ -26,6 +28,8 @@
 
 .info {
   padding: 50px;
+  max-width: 100%;
+
 }
 
 .rotate45 {
